fix: removed usage of toList() not available with JDK 8